# eight-queens-puzzle

./: .pytest.ini  Dockerfile  README.md  docker-compose.yml  pyproject.toml  view_db_solutions.py  wait-for-postgres.sh
eight_queens_puzzle/: __init__.py  __main__.py  eight_queens_puzzle.py  models.py
eight_queens_puzzle/main/: __init__.py  __main__.py  chessboard.py
tests/: test_eight_queens.py  test_eight_queens_main.py  test_eight_queens_models.py
