[tool.poetry]
name = "eight-queens-puzzle"
version = "0.1.0"
description = ""
authors = ["Jorge Castro <me@jorgecastro.xyz>"]
readme = "README.md"
packages = [{include = "eight_queens_puzzle"}]

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^1.4.45"
python-dotenv = "^0.21.0"
psycopg2 = "^2.9.5"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
